--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,18 @@
     <meta name="theme-color" content="#051e3e" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+<div class="content">
+</div>
 
     <title>PokeMatch</title>
     <style>
       .grid {
         display: flex;
         flex-wrap: wrap;
-        width: 400px;
+        width: 950px;
       }
     </style>
   </head>
